--- a/gxsd-ios/Info.plist
+++ b/gxsd-ios/Info.plist
@@ -58,5 +58,16 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>APP需要您的同意才能读取媒体资料库，用于上传照片</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>APP需要您的同意才能读取媒体资料库，用于保存照片</string>
+	<key>NSCameraUsageDescription</key>
+	<string>APP需要您的同意才能使用相机，用于拍照上传照片</string>
 </dict>
 </plist>
